--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "gulp-connect": "^4.1.0",
     "gulp-ruby-sass": "^2.0.6",
     "gulp-sass": "^2.3.2",
-    "gulp-traceur": "^0.17.2"
+    "gulp-traceur": "^0.17.2",
+    "lodash": "^4.13.1"
   }
 }
